# AI-Pedagogy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_REFACTORING.md  QUICKSTART.md  README.md  SETUP.md  config.example.yml  config.yml  main.py  main_batch.py  main_expert.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yml  python-tests.yml
agents/: __init__.py  base_agent.py  expert.py  learner_agent.py  oracle.py  parent_agent.py  teacher_agent.py
data/: glossary.txt  glossary_v2.txt  glossary_v3.txt
data/ontologies/: ontology_aliens_10.json  ontology_aliens_10_v2.json  ontology_aliens_10_v3.json  ontology_aliens_30.json  ontology_aliens_50.json  ontology_old.json
ontology/: __init__.py  ontology_generator.py  ontology_utils.py
prompts/: prompts.json  tester_prompts.json
results/mini_clear_condition/: 20q_test_logs_bottom_up.json  20q_test_logs_learner_questions.json  20q_test_logs_mixed_bottom-up_learner_questions.json  20q_test_logs_mixed_bottom-up_teacher_questions.json  20q_test_logs_mixed_learner_questions.json  20q_test_logs_mixed_teacher_questions.json  20q_test_logs_mixed_top-down_learner_questions.json  20q_test_logs_mixed_top-down_teacher_questions.json  20q_test_logs_teacher_questions.json  20q_test_logs_top_down.json  training_logs_bottom_up.json  training_logs_learner_questions.json  training_logs_mixed_bottom-up_learner_questions.json  training_logs_mixed_bottom-up_teacher_questions.json  training_logs_mixed_learner_questions.json  training_logs_mixed_teacher_questions.json  training_logs_mixed_top-down_learner_questions.json  training_logs_mixed_top-down_teacher_questions.json  (+2 more)
testing/: OntologyAligner.py  __init__.py  functions.py  main_test.py  onto_match.py  ontology_querier.py  ontology_tester.py  test_20q.py
tests/: __init__.py  conftest.py  test_config.py  test_ontology.py  test_prompts.py
training/: __init__.py  trainer.py
utils/: IG_visualizer.py  InformationTracker.py  __init__.py  analyzeOntoAcquisition.py  analyze_trials.py  api_interface.py  config_loader.py  information_cloud.py  prompts_loader.py  speech_act_analysis.py
(+347 files in other folders)
