[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiped"
version = "1.0.0"
description = "AIP: Artificial Intelligence Pedagogy - A research platform for simulating pedagogical interactions between AI agents"
authors = [
    {name = "Sabrina Patania"},
    {name = "Luca Annese"},
    {name = "Cansu Koyuturk"},
    {name = "Azzurra Ruggeri"},
    {name = "Dimitri Ognibene"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["artificial intelligence", "pedagogy", "llm", "education", "social learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ai21>=3.2.0",
    "openai>=1.76.2",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/aiped"
"Bug Reports" = "https://github.com/yourusername/aiped/issues"
"Source" = "https://github.com/yourusername/aiped"

[project.scripts]
aiped = "main:main"
aiped-batch = "main_batch:main"
aiped-expert = "main_expert:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "ontology*", "testing*", "training*", "utils*"]
exclude = ["*.tests*", "*.__pycache__*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
